--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,6 +145,7 @@ nav ul a:hover {
 }
 .servicepage-img {
     background-position: center;
+    background-size: cover;
     object-fit: cover;
     width: 100%;
     height: 300px;
