--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,72 +1,8 @@
-//
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
-$font-sans: 'Open Sans', sans-serif;
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
-//Colors
-$black: #2a2b2c;
-$white: #ffffff;
+// Variables
+@import 'variables';
 
-
-main {
-    min-width: 300px;
-    max-width: 500px;
-    margin: auto;
-    p {
-        font-size: 1em;
-        line-height: 1.75em;
-        border-top: 3px solid;
-        border-image: linear-gradient(to right, #008fe3 0%, #005b98 100%);
-        border-image-slice: 1;
-        border-width: 3px;
-        margin: 0;
-        padding: 40px;
-        counter-increment: section;
-        position: relative;
-        color: $black;
-
-        //numbers
-        &:before {
-            content: counter(section);
-            position: absolute;
-            border-radius: 50%;
-            padding: 5px;
-            height: 2em;
-            width: 2em;
-            background-color: $black;
-            text-align: center;
-            line-height: 1.25em;
-            color: $white;
-            font-size: 1em;
-        }
-    }
-    //odd number borders
-    p:nth-child(odd) {
-        border-right: 3px solid;
-        padding-left: 0;
-
-        &:before {
-            left: 100%;
-            margin-left: -14px;
-        }
-    }
-    //even number borders
-    p:nth-child(even) {
-        border-left: 3px solid;
-        padding-right: 0;
-
-        &:before {
-            right: 100%;
-            margin-right: -13px;
-        }
-    }
-    //handle first and last
-    p:first-child {
-        border-top: 0;
-        border-top-right-radius:0;
-        border-top-left-radius:0;
-    }
-    p:last-child {
-        border-bottom-right-radius:0;
-        border-bottom-left-radius:0;
-    }
-}
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
