--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,48 @@ main p:last-child {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
+
+.workflow {
+    width: 300px;
+    margin: auto;
+}
+
+.workflow p {
+
+    border-top: 2px dashed;
+    border-color: blue !important;
+    margin:0; padding: 30px;
+}
+
+
+
+.workflow p:nth-child(even) {
+    border-left: 2px dashed;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    margin-right: 30px;
+    padding-right: 0;
+}
+
+.workflow p:nth-child(odd) {
+    border-right: 2px dashed;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    margin-left: 30px;
+    padding-left: 0;
+}
+
+.workflow p:first-child {
+    border-top: 0;
+    border-top-right-radius:0;
+    border-top-left-radius:0;
+}
+
+.workflow p:last-child {
+    border-bottom-right-radius:0;
+    border-bottom-left-radius:0;
+}
+
 .HomePage .parallax-container {
     height: 70vh!important;
 }
